# gvm

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
docs/: misc.md
goldilocks/: Cargo.toml
goldilocks/src/: field.rs  fp.rs  lib.rs  tests.rs  util.rs
multilinear_extensions/: Cargo.toml
multilinear_extensions/src/: lib.rs  test.rs  util.rs  virtual_poly.rs
poseidon/: Cargo.toml
sumcheck/: Cargo.toml
sumcheck/src/: lib.rs  prover.rs  structs.rs  tests.rs  util.rs  verifier.rs
transcript/: Cargo.toml
transcript/src/: lib.rs
